# calf

./: .env.sample  .gitignore  Cargo.toml  README.md  config.capnp  me.sh  wrangler.toml
.github/workflows/: check.yml
openapi/: Cargo.toml
openapi/src/: main.rs
public/: openapi.json
public/docs/: index.html
src/: lib.rs  middleware.rs  models.rs  mojang.rs  utils.rs
src/routes/: mod.rs  players.rs
src/routes/players/: batch.rs  cape.rs  head.rs  profile.rs  skin.rs  utils.rs
